globus-ftp-client (8.18-1+gt6.@distro@) @distro@; urgency=low

  * GT-534: Fix for crash after error with delayed pasv response

 -- Globus Toolkit <support@globus.org>  Mon, 09 Feb 2015 15:49:46 -0600

globus-ftp-client (8.17-1+gt6.@distro@) @distro@; urgency=low

  * Disable segfaulting test on GNU/Hurd

 -- Globus Toolkit <support@globus.org>  Tue, 18 Nov 2014 14:45:15 -0500

globus-ftp-client (8.16-1+gt6.@distro@) @distro@; urgency=low

  * don't use $HOME in tests

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 14:27:54 -0500

globus-ftp-client (8.15-1+gt6.@distro@) @distro@; urgency=low

  * doxygen fixes

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:13:45 -0500

globus-ftp-client (8.14-2+gt6.@distro@) @distro@; urgency=low

  * Add openssl build dep for tests

 -- Globus Toolkit <support@globus.org>  Tue, 28 Oct 2014 20:53:00 -0500

globus-ftp-client (8.14-1+gt6.@distro@) @distro@; urgency=low

  * GT-572: globus-ftp-client performs MLSD with incorrect TYPE

 -- Globus Toolkit <support@globus.org>  Tue, 28 Oct 2014 20:53:00 -0500

globus-ftp-client (8.13-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Fix some Doxygen issues
  * Fix dependency
  * Quiet some autoconf/automake warnings
  * Use mixed case man page install for all packages

 -- Globus Toolkit <support@globus.org>  Tue, 23 Sep 2014 12:20:22 -0400

globus-ftp-client (8.12-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-ftp-client (8.11-2+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-ftp-client (8.11-1+gt6.@distro@) @distro@; urgency=low

  * Skip put-test.pl on mingw

 -- Globus Toolkit <support@globus.org>  Wed, 06 Aug 2014 07:35:42 -0400

globus-ftp-client (8.10-1+gt6.@distro@) @distro@; urgency=low

  * Skip put-test.pl on mingw
