@@ -1,13 +1,13 @@
 Name:		globus-ftp-client
 %global _name %(tr - _ <<< %{name})
-Version:	8.18
+Version:	8.19
 Release:	1%{?dist}
 Summary:	Globus Toolkit - GridFTP Client Library
 
 Group:		System Environment/Libraries
 License:	ASL 2.0
 URL:		http://www.globus.org/
-Source:	http://www.globus.org/ftppub/gt6/packages/globus_ftp_client-8.18.tar.gz
+Source:	http://www.globus.org/ftppub/gt6/packages/globus_ftp_client-8.19.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 Requires:	globus-xio-popen-driver%{?_isa} >= 2
@@ -141,6 +141,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Thu Feb 12 2015 Globus Toolkit <support@globus.org> - 8.19-1
+- GT-568: Fix incompatibility between IPV4-only source and IPV6 dest when IPV6 is enabled
+
 * Mon Feb 09 2015 Globus Toolkit <support@globus.org> - 8.18-1
 - GT-534: Fix for crash after error with delayed pasv response
 
